# substrate-node-template

./: .gitignore  .gitpod.yml
node/src/: chain_spec.rs
pallets/nft/: Cargo.toml
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/posts/: Cargo.toml
pallets/posts/src/: lib.rs
pallets/traits/: Cargo.toml
pallets/traits/src/: lib.rs
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs
pallets/zodiac/: Cargo.toml
pallets/zodiac/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
